Fix all links to use lowercase index.html

--- a/Gaming/Overwatch/OverwatchHome.html
+++ b/Gaming/Overwatch/OverwatchHome.html
@@ -11,7 +11,7 @@
 <body>
     <!--section for the navigation bar (navbar)-->
     <nav role="navigation" class="navbar" id="PageTop">
-        <a href="../../Index.html" class="navbarHeader">
+        <a href="../../index.html" class="navbarHeader">
             <img id="ChannelLogo" src="../../Images/ChannelLogo.png" alt="Channel Logo is Shy Today"/>
             <p id="ChannelName"><b>GameHacker569</b></p>
         </a>
@@ -139,7 +139,7 @@
 
     <!--section for the bottom footer content of the page-->
     <footer class="footer">
-        <a href="../../Index.html" class="footerHomeLink">Home</a>
+        <a href="../../index.html" class="footerHomeLink">Home</a>
         <a href="OverwatchHome.html#PageTop" class="footerHomeLink">Return to the Top of the Page</a>
         <a href="https://www.youtube.com/channel/UCbKlNm4xa34uEjZrPKJBRsQ" class="footerHomeLink">
             <img src="../../Images/YouTube%20Logo.jpg" alt="Link to my Youtube Channel" class="footerImage">
