--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--section for the navigation bar (navbar)-->
     <nav role="navigation" class="navbar" id="PageTop">
-        <a href="Index.html" class="navbarHeader">
+        <a href="index.html" class="navbarHeader">
             <img id="ChannelLogo" src="Images/ChannelLogo.png" alt="Channel Logo is Shy Today"/>
             <p id="ChannelName"><b>GameHacker569</b></p>
         </a>
