--- a/Programming/Python/PythonHome.html
+++ b/Programming/Python/PythonHome.html
@@ -64,7 +64,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Python%20Files/triangle%20solver.zip" download="Triangle Solver" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/triangle.solver.zip" download="Triangle Solver" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
@@ -97,7 +97,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Python%20Files/Checkers.zip" download="Checkers" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Checkers.zip" download="Checkers" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
@@ -108,7 +108,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Python%20Files/Chess.zip" download="Chess" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Chess.zip" download="Chess" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
@@ -124,7 +124,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Python%20Files/Monopoly.zip" download="Monopoly" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Monopoly.zip" download="Monopoly" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
@@ -135,7 +135,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Python%20Files/Battleship.zip" download="Battleship" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Battleship.zip" download="Battleship" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
