--- a/Programming/Unity/UnityHome.html
+++ b/Programming/Unity/UnityHome.html
@@ -64,7 +64,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Unity%20Games/Flappy%20Bird%20Recreation.zip" download="Flappy Bird Recreation" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.Recreation.zip" download="Flappy Bird Recreation" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
@@ -76,7 +76,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Unity%20Games/Rust%20Raid%20Calculator%20(Values%20Are%20Wrong).zip" download="Rust Raid Calculator (Values are Incorrect)" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Rust.Raid.Calculator.Values.Are.Wrong.zip" download="Rust Raid Calculator (Values are Incorrect)" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
@@ -88,7 +88,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Unity%20Games/Birthday%20Analysis.zip" download="Birthday Analysis" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Birthday.Analysis.zip" download="Birthday Analysis" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
@@ -100,7 +100,7 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <a href="../../Downloadable%20Unity%20Games/Random%203D%20Maze.zip" download="Random 3D Maze Generator" class="DownloadLink">
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Random.3D.Maze.zip" download="Random 3D Maze Generator" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
      </main>
