--- a/Gaming/Zombies/ZombiesHome.html
+++ b/Gaming/Zombies/ZombiesHome.html
@@ -164,7 +164,7 @@
 
     <!--section for the bottom footer content of the page-->
     <footer class="footer">
-        <a href="../../Index.html" class="footerHomeLink">Home</a>
+        <a href="../../index.html" class="footerHomeLink">Home</a>
         <a href="ZombiesHome.html#PageTop" class="footerHomeLink">Return to the Top of the Page</a>
         <a href="https://www.youtube.com/channel/UCbKlNm4xa34uEjZrPKJBRsQ" class="footerHomeLink">
             <img src="../../Images/YouTube%20Logo.jpg" alt="Link to my Youtube Channel" class="footerImage">
@@ -173,7 +173,7 @@
             <img src="../../Images/LinkedIn%20Logo.jpg" alt="Link to my LinkedIn Page (Business Inquiries Only)" class="footerImage">
         </a>
 
-        <p id="footerCopyright">Copyright 2025 &#169;</p>
+        <p id="footerCopyright">Copyright &#169; 2025 Hunter J. Arcement|All Rights Reserved</p>
     </footer>
 
 </body>
