--- a/Programming/C#/C#Home.html
+++ b/Programming/C#/C#Home.html
@@ -140,7 +140,7 @@
             <img src="../../Images/LinkedIn%20Logo.jpg" alt="Link to my LinkedIn Page (Business Inquiries Only)" class="footerImage">
         </a>
 
-        <p id="footerCopyright">Copyright 2025 &#169;</p>
+        <p id="footerCopyright">Copyright &#169; 2025 Hunter J. Arcement|All Rights Reserved</p>
     </footer>
 
 </body>
