--- a/Programming/Python/PythonHome.html
+++ b/Programming/Python/PythonHome.html
@@ -101,7 +101,7 @@
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
-        <h2 class="ProjectName">Chess</h2>
+        <h2 class="ProjectName" id="PythonChess">Chess</h2>
         <p class="ProjectDescription">Now we are getting to the big projects, fast-forward from the last project. I have done a few more and now it is summertime, finished my first Java class, and learned C++ and C# on my own. What do I do? Hang out with friends, hahaha don't make me laugh. I made Chess in 48,000 lines of code instead! Similar to checkers I did not use any pygame or similar modules, drawing everything with the turtle graphics module. This was also my first time using Objects and Classes in python, which really validated their usefulness to me. This led me to set my bar even higher after achieving this feat: Monopoly.</p>
         <iframe class="ProjectVideo"
                 src="https://www.youtube.com/embed/7r0CUCYXgy4?si=VLfyyq4wDJi0dRnA"
@@ -128,7 +128,7 @@
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
-        <h2 class="ProjectName">Battleship</h2>
+        <h2 class="ProjectName" id="BattleshipWithPython">Battleship</h2>
         <p class="ProjectDescription">It has been a month since Monopoly released. I want to make a smaller program instead of a larger one, so as my last board game creation project, I selected Battleship. using objects and classes this project was finished in record time and with 3,000 lines of code! At this point I was doing crazy stuff in class like databases, networking, and brief introduction to web development through the C# Razor/Blazor tools. Consider that a precursor to creating this website, my personal website, and several WPF programs for my job as a remote programmer/software engineer.</p>
         <iframe class="ProjectVideo"
                 src="https://www.youtube.com/embed/98RD77UyLVU?si=TFwwKy1xMfhIy8Ps"
@@ -147,7 +147,7 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
 
-        <h2 class="ProjectName">Custom MIPS Assembler</h2>
+        <h2 class="ProjectName" id="CustomMIPSAssembler">Custom MIPS Assembler</h2>
         <p class="ProjectDescription">As of creating this website, my most recent python project, and likely my most ambitious 'for-fun' project. At this point I had done a database related project in <a href="PythonHome.html#PythonDBMS"  class="InWebsiteLink">Python</a>, <a href="../../Programming/Java/JavaHome.html#JavaDBMS" class="InWebsiteLink">Java</a>, <a href="../../Programming/C%23/C%23Home.html#CSharpDBMS" class="InWebsiteLink">C#</a>, <a href="../../Programming/Other%20Languages/OtherLanguagesHome.html#CppDBMS" class="InWebsiteLink">C++</a>, <a href="../../Programming/Other%20Languages/OtherLanguagesHome.html#CDBMS" class="InWebsiteLink">C</a>, <a href="../../Programming/Other%20Languages/OtherLanguagesHome.html#RustDBMS" class="InWebsiteLink">Rust</a>, <a href="../../Programming/Other%20Languages/OtherLanguagesHome.html#PhpDBMS" class="InWebsiteLink">PHP</a>, <a href="../../Programming/Other%20Languages/OtherLanguagesHome.html#MatchMakingInJavaScript" class="InWebsiteLink">JavaScript</a>, and Haskell (never shown since I am still learning the language overall). But there were no database tools in Assembly. So as a clinically insane programmer, what did I do? I made a python program to take all my assembly programs and run them just like my Asm IDE (MARS), then add custom instructions for database operations and make an assembly program to utilize them. Cool part is, this one took a little over 3,00 lines of python code to achieve. The video ended up being nearly an hour long as I wanted to show off all the assembly programs I wrote in a previous semester working through it, as well as the custom program I wrote to do databasing. I am extremely proud of this program, and it certainly blew a lot of my classmates' minds!</p>
         <iframe class="ProjectVideo"
                 src="https://www.youtube.com/embed/97EkooneuHE?si=b2M1iVl7qNU2z4X1"
