--- a/Programming/C#/C#Home.html
+++ b/Programming/C#/C#Home.html
@@ -66,7 +66,7 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
 
-        <h2 class="ProjectName">Matrix Website</h2>
+        <h2 class="ProjectName" id="MatrixWebsite">Matrix Website</h2>
         <p class="ProjectDescription">About a month after the population model database, I used some of the knowledge I gained during that semester to create a website that performs many operations such as addition, multiplication, inversion, and rref of matrices. Much of this logic was converted from a Java program I had been writing throughout that semester inspired by my Linear Algebra class.
         </p>
         <iframe class="ProjectVideo"
@@ -102,7 +102,7 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
 
-        <h2 class="ProjectName">File Sharing Database Server</h2>
+        <h2 class="ProjectName" id="FileSharingDBMS">File Sharing Database Server</h2>
         <p class="ProjectDescription">Not too long after the two physics executables, inspired by the computer networking class, I created a database of files and directories that could be shared over a network. This was only ever tested on my localhost, but I was able to send several files and entire directories to another folder. This used json serialization to ensure the contents are in the same format on reception as sent.
         </p>
         <iframe class="ProjectVideo"
@@ -112,7 +112,7 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
 
-        <h2 class="ProjectName">WinForms & WPF</h2>
+        <h2 class="ProjectName" id="WinFormsAndWPF_1">WinForms & WPF</h2>
         <p class="ProjectDescription">At the end of the spring 2025 semester, I got a job working as a remote programmer/software engineer. My boss informed me to learn WinForms then WPF since I would be using them for the job. These were the two projects that were born from me learning those two technologies.
         </p>
         <iframe class="ProjectVideo"
