--- a/Programming/Other Languages/OtherLanguagesHome.html
+++ b/Programming/Other Languages/OtherLanguagesHome.html
@@ -162,7 +162,7 @@
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
 
-        <h2 class="ProjectName">Youtube Website</h2>
+        <h2 class="ProjectName" id="GameHacker569Website">YouTube Website</h2>
         <p class="ProjectDescription">It's in the middle of summer 2025, I had been desiring to enhance my web development skills (in particular HTML, CSS, & JS). To accomplish this, I bought two books: One for beginners in HTML, CSS, & JS -- and another for professional web developers in JS. This project (which is the website you are on now!) was born as a way to practice and fully learn what I was reading, and bridge into a larger project. That project (my personal LinkedIn website) will not be on Youtube as a video, however you may view it through the link to my LinkedIn in the footer of each page in this site). I really enjoyed learning about css transitions and gradients. This biggest thing I wish I got to do more of for this project was use more JavaScript. There is a single function and one feature that uses it, the random video generator on the home (index.html) page.
         </p>
         <iframe class="ProjectVideo"
