--- a/Programming/Unity/UnityHome.html
+++ b/Programming/Unity/UnityHome.html
@@ -92,7 +92,7 @@
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
-        <h2 class="ProjectName">Random 3D Maze</h2>
+        <h2 class="ProjectName" id="Random3DMaze">Random 3D Maze</h2>
         <p class="ProjectDescription">As my first 3D game, this was a prototype to see how far I could push my own personal game development. Many of the challenges I dealt with working on this improved my knowledge of game development. Some of these included the maze generation algorithms, memory (RAM) usage, animations, and effects. Much of what I learned here went into the game development projects, as I finished this at some point during a semester where I was taking one of the two game development courses in uni.
         </p>
         <iframe class="ProjectVideo"
@@ -104,7 +104,7 @@
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
 
-        <h2 class="ProjectName">Chess</h2>
+        <h2 class="ProjectName" id="UnityChess">Chess</h2>
         <p class="ProjectDescription">Started during the winter intersession (period between two semesters in college) 2024, the main goal of this was to create a program that could beat some family members that I couldn't win against. While the A.i can on occasion catch me off guard, it doesn't beat me -- so it was never used for its intended purpose. This project took half a year to fully finish, and overall, I am quite happy with how it finished even with a subpar A.i the design of the menus, UI, and data storage were the project's bright spots.
         </p>
         <p class="ProjectDescription">The A.i itself uses the Minimax Formula with a list of 7 weights which were 'optimized' using the Genetic Algorithm (reinforcement learning algorithm). I got great experience with interactive UI since the player needs to drag the pieces, but I also need them to be stored in 3D space. This was the second time I had ever used the genetic algorithm and I ran if for 111 generations with 20 individuals in the populations. Frankly, the learning process was taking so long that I could not bear to leave my laptop running for longer considering I ran it for at least 2-3 weeks straight for the training of the A.i.
