--- a/Gaming/Overwatch/OverwatchHome.html
+++ b/Gaming/Overwatch/OverwatchHome.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overwatch</title>
     <script src="../../Logic.js"></script> <!--link the javascript to this page-->
     <link rel="stylesheet" href="../../Styles.css"> <!--link the cascading style sheet to this page-->
