Added Flappy Bird V2

--- a/Programming/Unity/UnityHome.html
+++ b/Programming/Unity/UnityHome.html
@@ -119,6 +119,18 @@
         <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Chess_Unity.zip" download="Chess" class="DownloadLink">
             <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
         </a><br><br>
+
+        <h2 class="ProjectName" id="FlappyBird2">Flappy Bird Recreation V2.0</h2>
+        <p class="ProjectDescription">A project started after the completion of this and my portfolio website as a way to display how much I have improved and learned over two years of Unity development. I polished some of the poor coding behind the scenes from similar recent projects allowing for a fast development time of around a week and a half. Some of the new features included adding scene transition, settings, sound, and better storage for player scores. The usage of json instead of the text file used for the original was a game-changer, allowing for the addition of features that would've been impossible at the level I was at two years ago. The improvement of the original visual assets also really helped the project seem more complete, the addition of a main, settings, and pause menu also solidified this as a real game. No longer is this just a wanna-be game developer learning the ropes, this is me taking what I've learned and polishing a project to make it shine more than it did originally. I hope you all enjoy the improvements!
+        </p>
+        <iframe class="ProjectVideo"
+                src="https://www.youtube.com/embed/Oq42c0kP3RY?si=CEbwX3g6AiXJBuCm"
+                title="YouTube video player"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen></iframe><br><br>
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.Recreation.V2.0.zip" download="Flappy Bird Recreation V2.0" class="DownloadLink">
+            <button class="DownloadExeZip">Download Project Exe as Zip Folder</button>
+        </a><br><br>
      </main>
 
     <!--section for the bottom footer content of the page-->
