--- a/Programming/Java/JavaHome.html
+++ b/Programming/Java/JavaHome.html
@@ -102,6 +102,15 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
+
+        <h2 class="ProjectName" id="JavaSprintBoot_1">Electric Marimba Company -- Sprint Boot</h2>
+        <p class="ProjectDescription">This is fall 2025, I am getting closer to graduating from college and I had applied for a summer internship. A classmate who was working there told me that learning Sprint Boot + Docker would be a good thing, so I did. This project utilized my passion for percussion and my newfound skills for web development. I hadn't done a Java program in half a year (not including school-work that is). Learning Docker was the harder of the two items I learnt since the Spring Boot stuff is similar to Django and Blazor.
+        </p>
+        <iframe class="ProjectVideo"
+                src="https://www.youtube.com/embed/ZSsaJQfseMw?si=2HOQ3NGEuNBRTM51"
+                title="YouTube video player"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen></iframe><br><br>
     </main>
 
     <!--section for the bottom footer content of the page-->
