--- a/Programming/Unity/UnityHome.html
+++ b/Programming/Unity/UnityHome.html
@@ -66,7 +66,23 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <br><br>
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.Recreation.Windows.64.Build.zip" download="Flappy Bird Recreation" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 64-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.Recreation.Windows.32.Build.zip" download="Flappy Bird Recreation" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 32-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.Recreation.Linux.Build.zip" download="Flappy Bird Recreation" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Linux</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.Recreation.MacOS.Build.zip" download="Flappy Bird Recreation" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for MacOS</button>
+        </a><br>
+
+        <br>
 
         <h2 class="ProjectName">Rust Raid Calculator</h2>
         <p class="ProjectDescription">This project was one at some point when I worked at Little Caesars. My boss got me to play this game <i>Rust: Console Edition</i>. I wanted to learn it fast and be an asset to our small group, so I created this application to help with raiding. Raiding is the act of either picking through or blowing through the base of another player or group of players to take their loot and evict them. The stats are not correct anymore (honestly the wiki's stats were weird, so they may have never been correct). But this also proved the merit of web applications through Unity at a time where all of my other projects were constrained to console applications.
@@ -86,7 +102,23 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <br><br>
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Birthday.Analysis.Windows.64.Build.zip" download="Birthday Analysis" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 64-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Birthday.Analysis.Windows.32.Build.zip" download="Birthday Analysis" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 32-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Birthday.Analysis.Linux.Build.zip" download="Birthday Analysis" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Linux</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Birthday.Analysis.MacOS.Build.zip" download="Birthday Analysis" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for MacOS</button>
+        </a><br>
+
+        <br>
 
         <h2 class="ProjectName" id="Random3DMaze">Random 3D Maze</h2>
         <p class="ProjectDescription">As my first 3D game, this was a prototype to see how far I could push my own personal game development. Many of the challenges I dealt with working on this improved my knowledge of game development. Some of these included the maze generation algorithms, memory (RAM) usage, animations, and effects. Much of what I learned here went into the game development projects, as I finished this at some point during a semester where I was taking one of the two game development courses in uni.
@@ -96,7 +128,23 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <br><br>
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Randomized.3D.Maze.Windows.64.Build.zip" download="Randomized 3D Maze" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 64-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Randomized.3D.Maze.Windows.32.Build.zip" download="Randomized 3D Maze" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 32-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Randomized.3D.Maze.Linux.Build.zip" download="Randomized 3D Maze" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Linux</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Randomized.3D.Maze.MacOS.Build.zip" download="Randomized 3D Maze" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for MacOS</button>
+        </a><br>
+
+        <br>
 
         <h2 class="ProjectName" id="UnityChess">Chess</h2>
         <p class="ProjectDescription">Started during the winter intersession (period between two semesters in college) 2024, the main goal of this was to create a program that could beat some family members that I couldn't win against. While the A.i can on occasion catch me off guard, it doesn't beat me -- so it was never used for its intended purpose. This project took half a year to fully finish, and overall, I am quite happy with how it finished even with a subpar A.i the design of the menus, UI, and data storage were the project's bright spots.
@@ -108,7 +156,23 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <br><br>
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Chess.Windows.64.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 64-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Chess.Windows.32.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 32-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Chess.Linux.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Linux</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Chess.MacOS.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for MacOS</button>
+        </a><br>
+
+        <br>
 
         <h2 class="ProjectName" id="FlappyBird2">Flappy Bird Recreation V2.0</h2>
         <p class="ProjectDescription">A project started after the completion of this and my portfolio website as a way to display how much I have improved and learned over two years of Unity development. I polished some of the poor coding behind the scenes from similar recent projects allowing for a fast development time of around a week and a half. Some of the new features included adding scene transition, settings, sound, and better storage for player scores. The usage of json instead of the text file used for the original was a game-changer, allowing for the addition of features that would've been impossible at the level I was at two years ago. The improvement of the original visual assets also really helped the project seem more complete, the addition of a main, settings, and pause menu also solidified this as a real game. No longer is this just a wanna-be game developer learning the ropes, this is me taking what I've learned and polishing a project to make it shine more than it did originally. I hope you all enjoy the improvements!
@@ -118,7 +182,23 @@
                 title="YouTube video player"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe><br><br>
-        <br><br>
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.V2.0.Windows.64.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 64-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.V2.0.Windows.32.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Windows 32-bit</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.V2.0.Linux.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for Linux</button>
+        </a><br>
+
+        <a href="https://github.com/HunterArcement569/GameHacker569_Website/releases/download/Init/Flappy.Bird.V2.0.MacOS.Build.zip" download="Chess" class="DownloadLink">
+            <button class="DownloadExeZip">Download Build as Zip Folder for MacOS</button>
+        </a><br>
+
+        <br>
      </main>
 
     <!--section for the bottom footer content of the page-->
